# ghost_git_writer

./: .gitignore  Cargo.toml  Jul-17-23-15  LICENSE  README.md  auto_release.bash  chglog.md  test_diff.txt
old/: _config.rs  _llm.rs  _prompt.rs
reference/: config.md  logic_map.md
src/: #main.rs#  cli_helper.rs  cmt_msg.rs  config.rs  custom_prompt.rs  git.rs  llm.rs  main.rs  prompt.rs  read_codes.rs  readme.rs  storage.rs  sum.rs
