[package]
name = "ghost_git_writer"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Uliboooo uliboulibo@gmail.com"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
git2 = "0.20.2"
ollama-rs = "0.3.2"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread"] }
llm-api-rs = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
